[project]
name = "foggeett"
version = "0.1.0"
description = "Biblioteca C++ de alta performance para trading"
authors = [{name = "Seu Nome", email = "voce@email"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
]

[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build.verbose = true
wheel.expand-macos-universal-tags = true


