[project]
name = "foggeett"
version = "0.1.3"
description = "High-performance C++ library for technical analysis and trading indicators."
authors = [
  { name = "Saulo Veríssimo", email = "sauloverissimo@outlook.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "License :: OSI Approved :: MIT License"
]

[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["foggeett"]
minimum-version = "0.11"
build.verbose = true
